# LightRAG-new

./: DEVELOPMENT_SETUP.md  Dockerfile  docker-compose.yaml  env.example  pyproject.toml  setup.md  start_dev.sh
.vercel/: project.json
lightrag/: prompt.py
lightrag/api/: lightrag_server.py
lightrag/api/routers/: document_routes.py
lightrag/api/webui/: index.html
lightrag/api/webui/assets/: _basePickBy-B-a0fIP2.js  _basePickBy-D8JlmiSJ.js  _baseUniq-CpoEHWgm.js  _baseUniq-DJZa7Tae.js  architectureDiagram-IEHRJDOE-CWLqZWPB.js  architectureDiagram-IEHRJDOE-Dga5rsHY.js  blockDiagram-JOT3LUYC-BKHu-E5E.js  blockDiagram-JOT3LUYC-CTfJIiKO.js  c4Diagram-VJAJSXHY-BJsJswsd.js  c4Diagram-VJAJSXHY-xnPLBiUd.js  chunk-4BMEZGHF-D49YB3vV.js  chunk-4BMEZGHF-hnO-Z4cg.js  chunk-A2AXSNBT-37zpfx5o.js  chunk-A2AXSNBT-bPTgrcUM.js  chunk-AEK57VVT-BIrQJ_Ul.js  chunk-AEK57VVT-DU7Nrzue.js  chunk-D6G4REZN-CRNh6uzm.js  chunk-D6G4REZN-D0PXJINT.js  chunk-RZ5BOZE2-BqghAmQ0.js  chunk-RZ5BOZE2-Cg_8EJ4N.js  chunk-XZIHB7SX-DT76uiVl.js  chunk-XZIHB7SX-MsO1xdbf.js  classDiagram-GIVACNV2-CRkNuBaa.js  classDiagram-v2-COTLJTTW-7_QXZsrz.js  clone-C3uXVuC0.js  clone-jpvh-5UR.js  dagre-OKDRZEBW-DC7KP_Fx.js  dagre-OKDRZEBW-UF7uU_rz.js  diagram-SSKATNLV-B2LJEQdO.js  (+61 more)
lightrag_webui/src/: App.tsx
lightrag_webui/src/api/: lightrag.ts
lightrag_webui/src/features/: DocumentManager.tsx  SiteHeader.tsx
lightrag_webui/src/hooks/: useLightragGraph.tsx
lightrag_webui/src/lib/: constants.ts
lightrag_webui/src/locales/: ar.json  en.json  fr.json  zh.json  zh_TW.json
lightrag_webui/src/stores/: settings.ts
(+1 files in other folders)
